Img and file structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>Mergaite</title>
 </head>
 <body>
-    Turinys
+    <main>
+        <header>
+            <img src="#" alt="logo">
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">Track</a>
+                <a href="#">Library</a>
+                <a href="#">Comunity</a>
+                <a href="#">Sign In</a>
+            </nav>
+        </header>
+        <section>
+            <div>
+                <h1>404</h1>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia ipsum autem architecto assumenda magnam praesentium aliquam excepturi error laborum esse culpa explicabo hic impedit, earum, delectus rem recusandae quam sapiente.
+                </p>
+            </div>
+            <img src="#" alt="paveiksliukas">
+        </section>
+    </main>
 </body>
 </html>
