--- a/index.html
+++ b/index.html
@@ -4,11 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mergaite</title>
+    <style>
+        body {
+            background-color: #F8F8F8;
+            text-align:center;
+        }      
+            main { 
+                display: inline-block;
+                width:800px;
+                margin-top: 30px;
+                text-align: left;
+            }
+                main > header {
+                    display: inline-block;
+                    width:100%;
+                    float: left;
+                }
+                main > header > img {
+                        display: inline-block;
+                        float: left;
+                    }
+                    main > header > nav {
+                        display: inline-block;
+                        float: right;
+                    }
+                    main > header > nav > a {
+                            display: inline-block;
+                            padding: 15px;
+                        }
+                main > section {
+                    display: inline-block;
+                    width:100%;
+                    float: left;
+                }
+                main > section > div {
+                    display: inline-block;
+                    width:45%;
+                    float:left;
+                    margin-top:40px;
+                    }
+
+                    main > section > div > h1 {
+                        display: inline-block;
+                        width:100%;
+                        margin:0;
+                        font-size:100px;
+                    }
+
+                    main > section > div > p {
+                        display: inline-block;
+                        width:100%;
+                        margin:0;
+                        font-size:24px;
+                    }
+
+                main > section > img {
+                    display: inline-block;
+                    width:45%;
+                    float:right;
+                }
+
+
+    </style>
 </head>
 <body>
     <main>
         <header>
-            <img src="#" alt="logo">
+            <img src="./img/logo.png" alt="logo">
             <nav>
                 <a href="#">Home</a>
                 <a href="#">Track</a>
@@ -21,10 +83,10 @@
             <div>
                 <h1>404</h1>
                 <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia ipsum autem architecto assumenda magnam praesentium aliquam excepturi error laborum esse culpa explicabo hic impedit, earum, delectus rem recusandae quam sapiente.
+                    The link is broken or the page has been moved.
                 </p>
             </div>
-            <img src="#" alt="paveiksliukas">
+            <img src="./img/paveiksliukas.png" alt="paveiksliukas">
         </section>
     </main>
 </body>
