--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         body {
             background-color: #F8F8F8;
             text-align:center;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }      
             main { 
                 display: inline-block;
@@ -16,8 +17,6 @@
                 text-align: left;
             }
                 main > header {
-                    display: inline-block;
-                    width:100%;
                     float: left;
                 }
                 main > header > img {
@@ -30,11 +29,14 @@
                     }
                     main > header > nav > a {
                             display: inline-block;
-                            padding: 15px;
+                            padding: 20px;
+                            text-decoration: none;
+                            color: grey;
+                            text-transform: capitalize;
+                            line-height: 20px;
                         }
+
                 main > section {
-                    display: inline-block;
-                    width:100%;
                     float: left;
                 }
                 main > section > div {
@@ -45,15 +47,11 @@
                     }
 
                     main > section > div > h1 {
-                        display: inline-block;
-                        width:100%;
                         margin:0;
                         font-size:100px;
                     }
 
                     main > section > div > p {
-                        display: inline-block;
-                        width:100%;
                         margin:0;
                         font-size:24px;
                     }
@@ -64,25 +62,40 @@
                     float:right;
                 }
 
+                .visasPlotis{
+                    display: inline-block;
+                    width:100%; 
+                }
+
+                .btnSigin{
+                    background-color: #fff;
+                    text-transform: uppercase;
+                    border:2px solid #555;
+                    border-radius: 17px;
+                    padding:5px 20px 5px 20px;
+                }
+
+                
+
 
     </style>
 </head>
 <body>
     <main>
-        <header>
+        <header class="visasPlotis">
             <img src="./img/logo.png" alt="logo">
             <nav>
                 <a href="#">Home</a>
                 <a href="#">Track</a>
                 <a href="#">Library</a>
                 <a href="#">Comunity</a>
-                <a href="#">Sign In</a>
+                <a href="#" class="btnSigin">Sign In</a>
             </nav>
         </header>
-        <section>
+        <section class="visasPlotis">
             <div>
-                <h1>404</h1>
-                <p>
+                <h1 class="visasPlotis">404</h1>
+                <p class="visasPlotis">
                     The link is broken or the page has been moved.
                 </p>
             </div>
